--- a/Development/public/test.html
+++ b/Development/public/test.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
     <title>The Holy Shick</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/lib/angular/angular.min.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
