--- a/Development/public/index.html
+++ b/Development/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-    <title>The Holy Shick</title>
+    <title>The Holy Chic</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
