Final Version v2.3 - (minification, responsive site fix, main index fix)

--- a/Development/public/index.html
+++ b/Development/public/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="UTF-8">
     <title>The Holy Chic</title>
+    <link rel="icon"
+      type="image/png"
+      href="../public/images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -68,7 +71,6 @@
         <div id="menu"> <!-- Open Menu -->
 
             <br><br><br>
-            <!--(Need to make this generic to final project)-->
             <div class="bookSchema" id="oldTestament" ng-show="currentPage=='religion'">
                 <h1 class="titleBook1">The Old Testament</h1>
                 <a href="#">
